# EE543_coffee_robot

./: .editorconfig  .gitignore  README.md  docker-compose.yml  pyproject.toml
coffee_robot/: package.xml  setup.cfg
coffee_robot/launch/: launch.py  launch2.py
coffee_robot/models/: robot.sdf
sim/coffee_robot/: package.xml  setup.py
sim/coffee_robot/launch/: bridge.yaml  launch.py  launch_ex.py
sim/coffee_robot/models/: example.sdf  robot.sdf  world.sdf
sim/stl_files/: .robot.sdf.swp  base.part  base.stl  coffee_robot.sdf  config.json  joint.part  joint.stl  joint_end.stl  robot.sdf  slider_base.part  world.sdf
stl_files/: config.json  env.sh  joint_connector.part  joint_connector.stl  joint_end.part  slider_base.stl  world.sdf
