[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["EmDash00 <emberchow00@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
scipy = "^1.13.0"
matplotlib = "^3.8.3"
sympy = ">=1.9,<1.10"
concave-hull = "^0.0.7"
ipykernel = "^6.29.4"
nbconvert = "^7.16.3"
onshape-to-robot = "^0.3.26"
pybullet = "^3.2.6"
requests = "^2.32.3"
commentjson = "^0.9.0"
colorama = "^0.4.6"
numpy-stl = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
